@@ -3045,7 +3045,7 @@ $1',
 'hebrew-calendar-m12-gen' => 'Elul', # only translate this message to other languages if you have to change it
 
 # Default signatures for all languages. Do not duplicate to other languages
-'signature' => '[[$1|$2]] ([[$3|$4]])', # default signature for registered users
-'signature-ip' => '[[$1|$2]] ([[$3|$4]])', # default signature for anonymous users
+'signature' => '[[User:$1|$2]]', # default signature for registered users
+'signature-anon' => '[[Special:Contributions/$1|$2]]', # default signature for anonymous users
 
 );
