@@ -255,7 +255,7 @@ $wgOptionalMessages = array(
 	'hebrew-calendar-m11-gen',
 	'hebrew-calendar-m12-gen',
 	'signature',
-	'signature-ip',
+	'signature-anon',
 );
 
 /** EXIF messages, which may be set as optional in several checks, but are generally mandatory */
